--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,20 @@
 {
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "require": {
+    "ext-json": "*",
     "charlottedunois/collection": "^0.2.0",
     "nesbot/carbon": "^2.18",
-    "twig/twig": "^2.10",
-    "nikic/fast-route": "^1.3"
+    "nikic/fast-route": "^1.3",
+    "twig/twig": "^2.10"
   },
   "autoload": {
     "psr-4": {
       "": "src/"
     }
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "sort-packages": true
   }
 }
