--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,16 @@
       "": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "": "tests"
+    }
+  },
   "config": {
     "optimize-autoloader": true,
     "sort-packages": true
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^8.1"
   }
 }
