--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-composer.phar
 /vendor/
 
 /nbproject/private/
@@ -6,3 +5,6 @@ composer.phar
 
 /css/*.css
 /css/*.map
+
+/.phpunit.result.cache
+/clover.xml
