--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
   "prefer-stable": true,
   "require": {
     "ext-json": "*",
-    "charlottedunois/collection": "^0.2.0",
     "nesbot/carbon": "^2.21",
     "nikic/fast-route": "^1.3",
+    "sylae/collection": "^0.2.0",
     "twig/twig": "^2.11"
   },
   "autoload": {
