--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,10 @@
   "prefer-stable": true,
   "require": {
     "ext-json": "*",
-    "nesbot/carbon": "^2.46",
+    "nesbot/carbon": "^2.47",
     "nikic/fast-route": "^1.3",
     "sylae/collection": "^0.2.0",
-    "twig/twig": "^2.14"
+    "twig/twig": "^3.3"
   },
   "autoload": {
     "psr-4": {
@@ -24,5 +24,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5"
-  }
+  },
+  "name": "sylae/doapk",
+  "description": "Diary of a Professional Knockoff (website)"
 }
