--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,11 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "ext-json": "*",
     "nesbot/carbon": "^2.47",
     "nikic/fast-route": "^1.3",
     "sylae/collection": "^0.2.0",
-    "twig/twig": "^3.3"
+    "twig/twig": "^3.3",
+    "php": "^8.0"
   },
   "autoload": {
     "psr-4": {
